fix: iphone layout issues

--- a/src/Components/home/testimonials/index.css
+++ b/src/Components/home/testimonials/index.css
@@ -117,8 +117,8 @@ Reviews
 
 @media screen and (max-width: 692px) {
   .info {
-    margin-bottom: 0.75rem;
-    min-height: 9em;
+    margin-top: 0;
+    min-height: 10em;
   }
 }
 
